--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,9 @@
 <p>
+<strong>1.0.0.6 = February 20, 2015</strong>
+<ul>
+	<li>Added admin css which makes sure the text area doesn’t cover the size/color controls.</li>
+	<li>Added enqueue scripts file</li>
+</ul>
 <strong>1.0.0.5 = December 19, 2014</strong>
 <ul>
     <li>Made css for second text only get applied to second_text - initially was competing with single text from mp_stacks core.</li>
