--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,10 @@
 <p>
+<strong>= 1.0.0.7 = September 20, 2015</strong>
+<ul>
+    <li>Added Device Size Controls for Second Text</li>
+    <li>Admin Meta Scripts now enqueued only when needed.</li>
+    <li>Brick Metabox controls now load using ajax.</li>
+</ul>
 <strong>1.0.0.6 = February 20, 2015</strong>
 <ul>
 	<li>Added admin css which makes sure the text area doesn’t cover the size/color controls.</li>
