--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,8 @@
 <p>
+<strong>= 1.0.0.8 = March 8, 2016</strong>
+<ul>
+	<li>Add CSS Class "mp-stacks-text-area" to second text areas.</li>
+</ul>
 <strong>= 1.0.0.7 = September 20, 2015</strong>
 <ul>
     <li>Added Device Size Controls for Second Text</li>
